syntax = "proto3";
option go_package =".;protos";

message GetCartByUserIDRequest {
    string UserId = 1;
}

message GetCartResponse {
    string UserId = 1;
    message Item {
        string ProductId = 1;
        string ProductName= 2;
        int32 Qty = 3;
        int32 Price = 4;
    }
    repeated Item Items = 2;
}


service Cart {
    rpc GetCartByUserId (GetCartByUserIDRequest) returns (GetCartResponse);
}